--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.1",
-    "angular-schema-form": "~0.8.12"
+    "angular-schema-form": "~0.8.12",
+    "schema-form-datetimepicker": "chengz/schema-form-datetimepicker"
   },
   "main": [
     "js/uiowaFormCreator.js"
